--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -95,21 +95,12 @@
              <li class="nav-item dropdown">
             </div>
               <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Productos</a>
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Camaras</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Camaras</a>
-              <a class="dropdown-item" href="#">Lentes</a>
-              <a class="dropdown-item" href="#">Tripies</a>
-              <a class="dropdown-item" href="#">Accesorios</a>
-              <a class="dropdown-item" href="#">Flashes</a>
-              <a class="dropdown-item" href="#">Fotografias</a>
-            </div>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ofertas</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Camaras</a>
               <a class="dropdown-item" href="#">Lentes</a>
             </div>
+          <li class="nav-item">
+            <a class="nav-link " href="#" role="button" aria-haspopup="true" aria-expanded="false">Accesorios</a>
           </li>
           <div id="menuAdmin"></div>
 
