--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,8 +38,8 @@
               localStorage.setItem('Usuario', JSON.stringify({
                 Nombre: "admin",
                 Contraseña: "1234",
-                Carrio: {},
-                Compras: {}
+                Carrio: [],
+                Compras: []
               }))
               location.href = "/admin"
             }
