--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,7 @@
                       Marca: "Cannon",
                       Descripcion: "Camara canon resistente a golpes y caidas, exelente para niños",
                       Tipo_producto: "Camara",
-                      Precio: 5500
+                      Precio_Min: 5500
                     }
                   }
                   else if (i==2){
@@ -95,7 +95,7 @@
                       Marca: "Cannon",
                       Descripcion: "Camara canon resistente a golpes y caidas, exelente para niños",
                       Tipo_producto: "Camara",
-                      Precio: 2500
+                      Precio_Min: 2500
                     }
                   }
                   else if(i==3){
@@ -104,7 +104,7 @@
                       Marca: "Cannon",
                       Descripcion: "Camara canon resistente a golpes y caidas, exelente para niños",
                       Tipo_producto: "Camara",
-                      Precio: 150
+                      Precio_Min: 150
                     }
                   }
 
