--- a/public/styles.css
+++ b/public/styles.css
@@ -85,3 +85,42 @@ img{
   margin-right: 10px;
 }
 
+ul.dropdown-cart{
+  min-width:250px;
+}
+ul.dropdown-cart li .item{
+  display:block;
+  padding:3px 10px;
+  margin: 3px 0;
+}
+ul.dropdown-cart li .item:hover{
+  background-color:#f3f3f3;
+}
+ul.dropdown-cart li .item:after{
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+
+.item-left{
+  float:left;
+}
+.item-left img,
+.item-left span.item-info{
+  float:left;
+}
+.item-left span.item-info{
+  margin-left:10px;   
+}
+ .item-left span.item-info span{
+  display:block;
+}
+.item-right{
+  float:right;
+}
+.item-right button{
+  margin-top:14px;
+}
