--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -73,7 +73,7 @@
                   document.getElementById('tag').innerHTML = '<div class="dropdown"><a class="dropdown-toggle" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-2x"></i></a><div class="dropdown-menu" aria-labelledby="dropdownUser"><a class="dropdown-item" href="#">Ver perfil</a><a class="dropdown-item" href="#">Editar Perfil</a><a class="dropdown-item" onclick="logout()">Cerrar sesion</a></div></div>'
 
 
-                  document.getElementById('tag1').innerHTML = '<div class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fas fa-shopping-cart fa-2x"></i></a><ul class="dropdown-menu dropdown-cart" role="menu">'+ productos +'<li class="divider"></li> <br> <center><a class="text-center" href="">Ver carrito</a></center> </ul></div>'
+                  document.getElementById('tag1').innerHTML = '<div class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fas fa-shopping-cart fa-2x"></i></a><ul class="dropdown-menu dropdown-cart" role="menu">'+ productos +'<li class="divider"></li> <br> <center><a class="text-center" href="">Terminar compra</a></center> </ul></div>'
                 }
                 else
                   document.getElementById('tag').innerHTML = '<a href="/signin">Sing in</a><a href="">/</a><a href="/login">Log in</a>'
@@ -119,7 +119,15 @@
         </ul>
 <script>
   function logout(){
-    
+    var user = JSON.parse(localStorage.getItem('Usuario'))
+
+    fetch("/admin/usuario/cart", {
+      headers: {
+        "Content-type": "application/json"
+      },
+      body: JSON.stringify(user),
+      method: "POST"
+    })
 
 
     localStorage.clear()
